# fxmim

./: README.md  min2.py
Documents/mulabo/20240709 enshuu/: linear_regestration.py  linear_regestration2.py  min.py  min2.py  pyproject.toml
