[tool.poetry]
name = "20240709 enshuu"
version = "0.1.0"
description = ""
authors = ["nonoashley <nonoashley0403@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "~2.2"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
